@@ -29,6 +29,7 @@ documents those changes that are of interest to users and admins.
     rpm and expat XML parser library/headers. 04_Cray-autoconf-rules.diff
  -- On Cray/ALPS systems  do node inventory before scheduling jobs.
     09_Cray-INVENTORY-directly-before-schedule.diff
+ -- Disable some salloc options on Cray systems. 11_salloc.diff
 
 * Changes in SLURM 2.3.0.pre1
 =============================
